; ModuleID = '/home/carl/AnghaBench/netdata/web/api/tests/extr_web_api.c_post_test_cleanup.c'
source_filename = "/home/carl/AnghaBench/netdata/web/api/tests/extr_web_api.c_post_test_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.web_client = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

@localhost = common dso_local global %struct.web_client* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.web_client*)* @post_test_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @post_test_cleanup(%struct.web_client* %0) #0 {
  %2 = alloca %struct.web_client*, align 8
  store %struct.web_client* %0, %struct.web_client** %2, align 8
  %3 = load %struct.web_client*, %struct.web_client** %2, align 8
  %4 = getelementptr inbounds %struct.web_client, %struct.web_client* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @buffer_free(i32 %6)
  %8 = load %struct.web_client*, %struct.web_client** %2, align 8
  %9 = getelementptr inbounds %struct.web_client, %struct.web_client* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @buffer_free(i32 %11)
  %13 = load %struct.web_client*, %struct.web_client** %2, align 8
  %14 = getelementptr inbounds %struct.web_client, %struct.web_client* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @buffer_free(i32 %16)
  %18 = load %struct.web_client*, %struct.web_client** %2, align 8
  %19 = call i32 @free(%struct.web_client* %18)
  %20 = load %struct.web_client*, %struct.web_client** @localhost, align 8
  %21 = call i32 @free(%struct.web_client* %20)
  ret void
}

declare dso_local i32 @buffer_free(i32) #1

declare dso_local i32 @free(%struct.web_client*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
